# echo-app-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
scripts/linux/: initialize_rust_project.sh  install_rust_dependencies.sh
scripts/macos/: install_rust_dependencies.sh
scripts/windows/: Initialize-RustProject.ps1  Install-RustDependencies.ps1
src/: main.rs
